--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "✨ Simple Electron Application",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "dev": "electron ."
   },
